syntax = "proto3";
// import "google/protobuf/timestamp.proto";

package grpc;

service Reader{
    rpc PostMessage(PostMessageRequest) returns (PostMessageResponse){}
}

message PostMessageRequest {
    string user_id = 1;
    string source_id = 2;
    string request_id = 3;
    bytes payload = 4;
}

message PostMessageResponse{}

